# mem.ai

./: .dockerignore  .gitignore  BENCHMARK_RESULTS.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  specdoc.txt
docs/: docs.html  index.html
memai/: __init__.py  cli.py  memory.py  models.py
memai/api/: __init__.py  app.py  auth.py  config.py  manager.py
memai/api/routes/: __init__.py  admin.py  memory.py  session.py  workflow.py
memai/benchmarks/: __init__.py  beam_eval.py  locomo_eval.py  longmemeval.py
memai/connectors/: __init__.py  autogen.py  generic.py  langchain.py  llamaindex.py  mcp.py  mem0.py  openai.py
memai/core/: __init__.py  event_memory.py  pami.py  procedural_memory.py  semantic_memory.py  staleness_detector.py  utility_scorer.py
memai/sdk/: __init__.py  client.py
tests/: test_api.py  test_core.py  test_phase3.py
web/: package-lock.json
web/public/: docs.html
web/src/: App.jsx  index.css
