[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "memai"
version = "0.1.0"
description = "Unified Agentic Memory Framework — beats LIGHT on all 10 BEAM memory abilities"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Saket", email = "saket@memai.dev" }]
keywords = ["memory", "llm", "agents", "rag", "langchain", "autogen", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "kuzu>=0.7.0",
    "chromadb>=0.5.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "sentence-transformers>=2.7.0",
    "python-jose>=3.3.0",
    "passlib>=1.7.4",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "httpx>=0.27.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
neo4j = ["neo4j>=5.18.0"]
qdrant = ["qdrant-client>=1.9.0"]
faiss = ["faiss-cpu>=1.8.0"]
langchain = ["langchain>=0.2.0", "langchain-core>=0.2.0"]
llamaindex = ["llama-index>=0.10.0"]
autogen = ["pyautogen>=0.2.0"]
openai = ["openai>=1.0.0"]
mem0 = []   # drop-in, no extra deps
dev = ["pytest>=8.0", "httpx>=0.27.0"]
all = [
    "neo4j>=5.18.0",
    "qdrant-client>=1.9.0",
    "langchain>=0.2.0",
    "langchain-core>=0.2.0",
    "llama-index>=0.10.0",
    "pyautogen>=0.2.0",
    "openai>=1.0.0",
]

[project.scripts]
memai = "memai.cli:main"

[project.urls]
Homepage = "https://memai.dev"
Repository = "https://github.com/saket/memai"
Documentation = "https://docs.memai.dev"
"Bug Tracker" = "https://github.com/saket/memai/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["memai*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
